fixed jumpiness in animation by changing translate to 152px

--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -146,7 +146,7 @@
 
 
   .closed {
-    transform: translateY(-200%);
+    transform: translateY(-152px);
     transition: all .5s;
   }
 
